amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/arguments-enum.api.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/arguments-enum.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 2

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-default-value-type-directive
  Message: Expecting 'enum' value but got 'String' value instead
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/arguments-enum.api.graphql#/declares/invalid1/shape/default-node
  Property: http://www.w3.org/ns/shacl#defaultValue
  Range: [(11,38)-(11,41)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-default-value-type-directive
  Message: Expecting 'String' value but got 'Any' value instead
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/arguments-enum.api.graphql#/declares/invalid2/shape/default-node
  Property: http://www.w3.org/ns/shacl#defaultValue
  Range: [(12,38)-(12,39)]
  Location: 
